<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rooms_name" />

    <EditText
        android:id="@+id/chooseRoomsName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/roonNameIsMust"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/checkBoxSetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:text="@string/pasword"/>

    <EditText
        android:id="@+id/choosePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="text" />

</LinearLayout>
